[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://src/scenes/main.gd" id="1_main"]
[ext_resource type="PackedScene" path="res://src/scenes/machine_canvas.tscn" id="2_canvas"]
[ext_resource type="PackedScene" path="res://src/ui/component_tray.tscn" id="3_tray"]
[ext_resource type="PackedScene" path="res://src/ui/parameter_panel.tscn" id="4_panel"]
[ext_resource type="PackedScene" path="res://src/ui/simulation_controls.tscn" id="5_controls"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="MachineCanvas" parent="." instance=ExtResource("2_canvas")]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TitleLabel" type="Label" parent="UILayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 4.0
offset_right = 200.0
offset_bottom = 24.0
grow_horizontal = 2
text = "MACHINE SHOP OF TOMORROW"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.4, 0.45, 0.55, 1)

[node name="SimulationControls" parent="UILayer" instance=ExtResource("5_controls")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 24.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ParameterPanel" parent="UILayer" instance=ExtResource("4_panel")]

[node name="ComponentTray" parent="UILayer" instance=ExtResource("3_tray")]
